@@ -26,9 +26,10 @@ public class WaterGlassNodeFactory extends F<SliceNodeArgs, PNode> {
 
     //Create images for the full-sized draggable water glasses
     @Override public PNode f( final SliceNodeArgs args ) {
-        final Rectangle2D bounds = args.slice.getShape().getBounds2D();
+        final Rectangle2D a = args.slice.getShape().getBounds2D();
+        final Rectangle2D bounds = new Rectangle2D.Double( a.getX(), a.getY(), 100, 200 );
 
-        BufferedImage image = cachedWaterGlassNode( 1, args.denominator, args.slice.color, args.slice.getShape().getBounds2D().getWidth(), args.slice.getShape().getBounds2D().getHeight() );
+        BufferedImage image = cachedWaterGlassNode( 1, args.denominator, args.slice.color, bounds.getWidth(), bounds.getHeight() );
         int c = debugDragRegion ? 100 : 0;
         final Point2D offset = new Point2D.Double( bounds.getCenterX() - image.getWidth() / 2, bounds.getCenterY() - image.getHeight() / 2 );
         PNode node = args.inContainer ? new PhetPPath( new Rectangle2D.Double( 0, 0, image.getWidth(), image.getHeight() ), new Color( c, c, c, c ) )
